# PikaToolBox

./: README.md  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
Packaged Software/: config.ini
Packaged Software/Code-Development-Softwares/: eXeScope-Exe-File-Info.ini  settings
Packaged Software/Flash-UART-Programer/: FlyMCU-Programer-0.10Config.ini
Packaging Software/AdminRun/: AdminRun.bat
Packaging Software/AdminRun/Code/: CMakeLists.txt  ico.rc  main.cpp
Packaging Software/ArchSeletor/v0.0.1/: Run.bat
Packaging Software/Bandicam/v5.0.0/App/Bandicam/: bandicam.ini
Packaging Software/Bandicam/v5.0.0/App/Bandicam/lang/: English.ini  Russian.ini  Simplified_Chinese.ini  (+1 more)
Packaging Software/CPU-Z/v1.9.7/: cpuz.ini
Packaging Software/CertInstall/: AuthorizedCA.bat  WgetImportCA.bat
Packaging Software/CertInstall/CA/: CA-ECC.cer  CA-RSA.cer  CA-SM2.cer
Packaging Software/CertInstall/CA/AUTH/: CA-RSA.cer
Packaging Software/Dism++/10.1.1002.1/Config/: Config.ini
Packaging Software/XiaoyuerYr/v2.10.3/Config/: [AppImmunity]自带免疫方案.ini  [Clean]全不选.ini  [Clean]全选.ini  [Clean]封装推荐清理方案.ini  [Clean]新机推荐清理方案.ini  [Optimization]全不选.ini  [Optimization]全选.ini  [Optimization]封装推荐优化方案.ini  [Optimization]新机推荐优化方案.ini
src/: App.tsx  softs.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/apps/: ToolsConfig.json
src-tauri/src/: main.rs
src/components/LeftControl/: LeftControl.tsx  LeftItem.tsx
src/components/RightShow/: RightGroup.tsx  RightItem.tsx  RightMain.tsx  TopMenu.tsx
src/pages/main/: Home.tsx
src/utils/: getSoft.ts
